feat : 피드백 적용